# llvm-discovery

./: .gitmodules  README.md
llvm/tools/discovery/: .gitignore  CMakeLists.txt  LICENSE  Makefile  assert_matches.py  check_patterns.py  common.mzn  commutative.txt  conditional_linear_scan.mzn  conditional_map.mzn  doall.mzn  find_patterns.py  linear_map_reduction.mzn  linear_reduction.mzn  linear_scan.mzn  map.mzn  mapfilter.mzn  mapreduction.mzn  merge_matches.py  optrecord.py  pipeline.mzn  process_matches.py  process_runtimes.py  process_stats.py  process_trace.py  reduction.mzn  scan.mzn  style.css  test.py  tiled_map_reduction.mzn  tiled_reduction.mzn  trace_utils.py  twophasemapreduction.mzn  twophasereduction.mzn  view_patterns.py
llvm/tools/discovery/examples/: hello-world-linked-list.trace  hello-world.trace  streamcluster.c  streamcluster.trace
llvm/tools/discovery/test/input/: complex-map.c  complex-pipe.c  complex-reduction.c  conditional-scan.c  double-reduction.c  fused-map.c  linear-mapreduce.c  list-map.c  list-reduction.c  map-reduce-nodata.c  map-reduction-list.c  map-reduction-parallel.c  map.c  mapreduce.c  reduction-branch.c  reduction-coarse.c  reduction-max.c  reduction-parallel.c  reduction.c  scan.c  sequential-pipe.c
llvm/tools/discovery/test/output/: complex-map.maps.szn.expected  complex-pipe.pipelines.szn.expected  complex-reduction.reductions.szn.expected  conditional-scan.conditional_linear_scans.szn.expected  double-reduction.reductions.szn.expected  fused-map.maps.szn.expected  linear-mapreduce.linear_map_reductions.szn.expected  linear-mapreduce.mapreductions.szn.expected  list-map.maps.szn.expected  (+15 more)
(+29 files in other folders)
